XWIKI-10092: An object can be stored in the database without some of its properties * Improve the code